auto-content-gen/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auto-content-gen
  namespace: auto-content-gen
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "50m"
    nginx.ingress.kubernetes.io/proxy-buffer-size: "64k"
    nginx.ingress.kubernetes.io/proxy-read-timeout: "600"
    cert-manager.io/cluster-issuer: "lets-encrypt-prod"
spec:
  ingressClassName: nginx
  rules:
    - host: acg.deeplearningintelligence.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auto-content-gen-service
                port:
                  number: 4000
